#--------------------------------------------------------------------
# configure.in for gms
#
# Author:  
#           Jean-Francois Ostiguy
#           ostiguy@fnal.gov
#
# Process this file with autoconf to produce a configure script.
#
#-------------------------------------------------------------------

AC_INIT([gms], [1.0])
#AC_CONFIG_SRCDIR([include/FastAllocator.h])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADERS

AM_INIT_AUTOMAKE
AM_CONFIG_HEADER([config.h])

LT_INIT

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

