# Process this file with autoconf to produce a configure script.
AC_INIT(src/DriftMap.cc)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(integrator, 1.0, no-define)

AC_ARG_WITH(cxx,AC_HELP_STRING([--with-cxx=CXX],[CXX = your compiler; g++=GNU Compiler (default), CC=Sun Compiler, pgCC=PGI compiler]),
if test "x${withval}" != "xno"; then
CXX=${withval}
fi)

AC_ARG_WITH(cc,AC_HELP_STRING([--with-cc=CC],[CC = your compiler; gcc=GNU Compiler (default), cc=Sun Compiler]),
if test "x${withval}" != "xno"; then
CC=${withval}
fi)

if test ${CXXFLAGS} && test ${CFLAGS}; then
set_CXXFLAGS=${CXXFLAGS}
set_CFLAGS=${CFLAGS}
fi

# Checks for programs.
AC_PROG_CXX(g++ CC)
AC_PROG_CC(gcc cc)
AC_PROG_LIBTOOL

AC_ARG_ENABLE(debug,AC_HELP_STRING([--enable-debug],[Debugging. Turns off Optimization]),
if test "x$set_CXXFLAGS" != "x" && test "x$set_CFLAGS" != "x"; then
	CXXFLAGS=set_CXXFLAGS
	CFLAGS=set_CFLAGS
	AC_SUBST(CFLAGS)
	AC_SUBST(CXXFLAGS)
elif test "x${GXX}" = "xyes" || test "x${GCC}" = "xyes"; then
   CFLAGS="-g"
   CXXFLAGS="-g -O2 -pipe -fpermissive -Wno-deprecated"
   AC_SUBST(CFLAGS)
   AC_SUBST(CXXFLAGS)
elif test "x${CXX}" = "xCC"; then
     CXXFLAGS="-instances=global"
     LDFLAGS="-Xlinker -zmuldefs"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(LDFLAGS)
elif test "x${CXX}" = "xpgCC"; then
     CXXFLAGS="-g"
     AM_CPPFLAGS="--prelink_objects"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(AM_CPPFLAGS)
fi,
if test "x$set_CXXFLAGS" != "x" && test "x$set_CFLAGS" != "x"; then
	CXXFLAGS=set_CXXFLAGS
	CFLAGS=set_CFLAGS
	AC_SUBST(CFLAGS)
	AC_SUBST(CXXFLAGS)
elif test "x${GXX}" = "xyes" || test "x${GCC}" = "xyes"; then
   CFLAGS="-g -O2"
   CXXFLAGS="-g -O2 -pipe -fpermissive -Wno-deprecated"
   AC_SUBST(CFLAGS)
   AC_SUBST(CXXFLAGS)
elif test "x${CXX}" = "xCC"; then
     CXXFLAGS="-fast -instances=global"
     LDFLAGS="-Xlinker -zmuldefs"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(LDFLAGS)
elif test "x${CXX}" = "xpgCC"; then
     CXXFLAGS="-g -fast"
     AM_CPPFLAGS="--prelink_objects"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(AM_CPPFLAGS)
fi
)

AC_ARG_WITH(gxx_rtti,AC_HELP_STRING([--with-gxx_rtti],[Enable G++ rtti]),,
if test "x${GXX}" = "xyes" && test "x$set_CXXFLAGS" = "x"; then
CXXFLAGS="-fno-rtti ${CXXFLAGS}"
AC_SUBST(CXXFLAGS)
AC_DEFINE(NO_RTTI,,nortti)
fi
)
AC_ARG_WITH(gxx_exception,AC_HELP_STRING([--with-gxx_exception],[Enable G++ exceptions]),,
if test "x${GXX}" = "xyes" && test "x$set_CXXFLAGS" = "x"; then
CXXFLAGS="-fno-exceptions ${CXXFLAGS}"
AC_SUBST(CXXFLAGS)
fi
)

if test "x$CXX" = "xpgCC"; then
	enable_shared=yes
fi

if test "$enable_shared" = yes; then
   AM_CONDITIONAL(SHARED_LIB,true)
else
   AM_CONDITIONAL(SHARED_LIB,false)
fi

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_CHECK_FUNCS([pow])

AC_CONFIG_FILES([src/Makefile Makefile])
AC_OUTPUT
