#--------------------------------------------------------------------
# configure.in for mxyzptlk
#
# Authors:  Enrico Ng (Summer Intern) 
#
#           Jean-Francois Ostiguy
#           ostiguy@fnal.gov
#
# Process this file with autoconf to produce a configure script.
#
#-------------------------------------------------------------------

AC_INIT(src/TJetConversions.cc)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(mxyzptlk, 1.0, no-define)

AC_ARG_WITH(cxx,AC_HELP_STRING([--with-cxx=CXX],[CXX = your compiler; g++=GNU Compiler (default), CC=Sun Compiler, pgCC=PGI compiler]),
if test "x${withval}" != "xno"; then
CXX=${withval}
fi)

AC_ARG_WITH(cc,AC_HELP_STRING([--with-cc=CC],[CC = your compiler; gcc=GNU Compiler (default), cc=Sun Compiler]),
if test "x${withval}" != "xno"; then
CC=${withval}
fi)

### this test is not really needed, except as a way to detect if CXXFLAGS/CFLAGS has been set 

if test ${CXXFLAGS} ;then 
set_CXXFLAGS=${CXXFLAGS}
fi 

if test ${CFLAGS}; then
set_CFLAGS=${CFLAGS}
fi


# Checks for programs.
AC_PROG_CXX(g++ CC)
AC_PROG_CC(gcc cc)
AC_PROG_LIBTOOL

AC_ARG_ENABLE(debug,AC_HELP_STRING([--enable-debug],[Debugging. Turns off Optimization]),
if test "x${GXX}" = "xyes" || test "x${GCC}" = "xyes"; then
   CFLAGS="${CFLAGS} -g"
   CXXFLAGS="${CXXFLAGS} -g -pipe -fpermissive -Wno-deprecated -fno-implicit-templates"
   AC_SUBST(CFLAGS)
   AC_SUBST(CXXFLAGS)
elif test "x${CXX}" = "xCC"; then
     CXXFLAGS=${CXXFLAGS} "-instances=global"
     LDFLAGS="-Xlinker -zmuldefs"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(LDFLAGS)
elif test "x${CXX}" = "xpgCC"; then
     CXXFLAGS=${CXXFLAGS} "-g"
     AM_CPPFLAGS="--prelink_objects"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(AM_CPPFLAGS)
fi,
if test "x${GXX}" = "xyes" || test "x${GCC}" = "xyes"; then
     CFLAGS="${CFLAGS}"
     CXXFLAGS="${CXXFLAGS} -pipe -fpermissive -Wno-deprecated -fno-implicit-templates"
     AC_SUBST(CFLAGS)
     AC_SUBST(CXXFLAGS)
elif test "x${CXX}" = "xCC"; then
     CXXFLAGS=${CXXFLAGS} "-fast -instances=global"
     LDFLAGS="-Xlinker -zmuldefs"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(LDFLAGS)
elif test "x${CXX}" = "xpgCC"; then
     CXXFLAGS=${CXXFLAGS} "-g -fast"
     AM_CPPFLAGS="--prelink_objects"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(AM_CPPFLAGS)
fi
)

#AC_ARG_WITH(gxx_rtti,AC_HELP_STRING([--with-gxx_rtti],[Enable G++ rtti]),,
#if test "x${GXX}" = "xyes" && test "x$set_CXXFLAGS" = "x"; then
#CXXFLAGS="-fno-rtti ${CXXFLAGS}"
#AC_SUBST(CXXFLAGS)
#AC_DEFINE(NO_RTTI,,nortti)
#fi
#)

#AC_ARG_WITH(gxx_exception,AC_HELP_STRING([--with-gxx_exception],[Enable G++ exceptions]),,
#if test "x${GXX}" = "xyes" && test "x$set_CXXFLAGS" = "x"; then
#CXXFLAGS="-fno-exceptions ${CXXFLAGS}"
#AC_SUBST(CXXFLAGS)
#fi
#)

if test "x$CXX" = "xpgCC"; then
	enable_shared=yes
fi

if test "$enable_shared" = yes; then
   AM_CONDITIONAL(SHARED_LIB,true)
else
   AM_CONDITIONAL(SHARED_LIB,false)
fi

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h])

AC_ARG_VAR([BOOST_INC],    [BOOST include directory])dnl
AC_CHECK_HEADER(shared_ptr.hpp,,[
if test ${BOOST_INC} && test -r ${BOOST_INC}; then
        AC_SUBST(BOOST_INC)
        AC_MSG_RESULT([Location specified: ${BOOST_INC}])
else
# Try to guess the location based on the location of gcc 
        boost_inc=`which gcc | sed "s#bin\/gcc#include#"`
        if test -r $boost_inc/boost/shared_ptr.hpp; then
                BOOST_INC=$boost_inc
                AC_SUBST(BOOST_INC)
                AC_MSG_RESULT([Header file located in $BOOST_INC])
        else
		if test -r /usr/include/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/include"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
		elif test -r /usr/local/include/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/local/include"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
		elif test -r /usr/local/include/boost-1_33/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/local/include/boost-1_33"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
		elif test -r /usr/local/ap/include/boost-1_33/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/local/ap/include/boost-1_33"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
		elif test -r /usr/local/include/boost-1_32/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/local/include/boost-1_32"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
		elif test -r /usr/local/ap/include/boost-1_32/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/local/ap/include/boost-1_32"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
                else
		AC_MSG_ERROR([BOOST includes not found, please define BOOST_INC.]);
		fi
	fi
fi
])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_CHECK_FUNCS([pow sqrt])

AC_CONFIG_FILES([src/Makefile Makefile])
AC_OUTPUT
