#--------------------------------------------------------------------
# configure.in for python-bindings
#
# Author:   Jean-Francois Ostiguy
#           ostiguy@fnal.gov
#
# Process this file with autoconf to produce a configure script.
#
#-------------------------------------------------------------------

AC_INIT(src/py-marker.cpp)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(python-bindings, 1.0, no-define)

AC_ARG_WITH(cxx,AC_HELP_STRING([--with-cxx=CXX],[CXX = your compiler; g++=GNU Compiler (default), CC=Sun Compiler, pgCC=PGI compiler]),
if test "x${withval}" != "xno"; then
CXX=${withval}
fi)

AC_ARG_WITH(cc,AC_HELP_STRING([--with-cc=CC],[CC = your compiler; gcc=GNU Compiler (default), cc=Sun Compiler]),
if test "x${withval}" != "xno"; then
CC=${withval}
fi)

##----------------------------------------------------------
## by default, use the explicit template instantiation model
##-----------------------------------------------------------

AC_ARG_ENABLE(implicit-templates, AC_HELP_STRING([--enable-implicit-templates],[ Enable implicit template instantiation for portability ]), 
	      CXXFLAGS="${CXXFLAGS}",
              CXXFLAGS="-DMXYZPTLK_EXPLICIT_TEMPLATES -DBASICTOOLKIT_EXPLICIT_TEMPLATES ${CXXFLAGS}" )


if test -n "${CXXFLAGS}"; then 
set_CXXFLAGS=${CXXFLAGS}
fi

if test -n "${CFLAGS}"; then
set_CFLAGS=${CFLAGS}
fi

# Checks for programs.
AC_PROG_CXX(g++ CC)
AC_PROG_CC(gcc cc)
AC_PROG_LIBTOOL

AC_ARG_ENABLE(debug,AC_HELP_STRING([--enable-debug],[Debugging. Turns off Optimization]),
if test "x${set_CXXFLAGS}" != "x" && test "x${set_CFLAGS}" != "x"; then
   CXXFLAGS=${set_CXXFLAGS}
   CFLAGS=${set_CFLAGS}
   AC_SUBST(CFLAGS)
   AC_SUBST(CXXFLAGS )
elif test "x${GXX}" = "xyes" || test "x${GCC}" = "xyes"; then
   CFLAGS="${CFLAGS} -g -O2"
   CXXFLAGS="${CXXFLAGS} -g -O2 -pipe -fpermissive -Wno-deprecated"
   AC_SUBST(CFLAGS)
   AC_SUBST(CXXFLAGS)
elif test "x${CXX}" = "xCC"; then
     CXXFLAGS=${CFLAGS} "-instances=global"
     LDFLAGS="-Xlinker -zmuldefs"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(LDFLAGS)
elif test "x${CXX}" = "xpgCC"; then
     CXXFLAGS=${CXXFLAGS} "-g"
     AM_CPPFLAGS="--prelink_objects"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(AM_CPPFLAGS)
fi,
if test "x$set_CXXFLAGS" != "x" && test "x$set_CFLAGS" != "x"; then
	CXXFLAGS=${set_CXXFLAGS}
	CFLAGS=${set_CFLAGS}
	AC_SUBST(CFLAGS)
	AC_SUBST(CXXFLAGS)
elif test "x${GXX}" = "xyes" || test "x${GCC}" = "xyes"; then
   CFLAGS="${CFLAGS} -g -O2"
   CXXFLAGS="${CXXFLAGS} -g -O2 -pipe -fpermissive -Wno-deprecated"
   AC_SUBST(CFLAGS)
   AC_SUBST(CXXFLAGS)
elif test "x${CXX}" = "xCC"; then
     CXXFLAGS=${CXXFLAGS} "-fast -instances=global"
     LDFLAGS="-Xlinker -zmuldefs"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(LDFLAGS)
elif test "x${CXX}" = "xpgCC"; then
     CXXFLAGS=${CXXFLAGS} "-g -fast"
     AM_CPPFLAGS="--prelink_objects"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(AM_CPPFLAGS)
fi
)

# beamline library needs rtti for the moment
#
#AC_ARG_WITH(gxx_rtti,AC_HELP_STRING([--with-gxx_rtti],[Enable G++ rtti]),,
#if test "x${GXX}" = "xyes" && test "x$set_CXXFLAGS" = "x"; then
#CXXFLAGS="-fno-rtti ${CXXFLAGS}"
#AC_SUBST(CXXFLAGS)
#AC_DEFINE(NO_RTTI,,nortti)
#fi
#)

#AC_ARG_WITH(gxx_exception,AC_HELP_STRING([--with-gxx_exception],[Enable G++ exceptions]),,
#if test "x${GXX}" = "xyes" && test "x$set_CXXFLAGS" = "x"; then
#CXXFLAGS="-fno-exceptions ${CXXFLAGS}"
#AC_SUBST(CXXFLAGS)
#fi
#)

AC_DEFINE(_EXCLUDE_MONITORS_,,excludemonitors)


if test "x$CXX" = "xpgCC"; then
	enable_shared=yes
fi

if test "$enable_shared" = yes; then
   AM_CONDITIONAL(SHARED_LIB,true)
else
   AM_CONDITIONAL(SHARED_LIB,false)
fi

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

#-----------------------------------------------------------------------------------------------------------
# glib
#-----------------------------------------------------------------------------------------------------------
AC_ARG_VAR([GLIB_INC],    [GLIB include directory])dnl
AC_CHECK_HEADER(glib.h,,[
if test ${GLIB_INC} && test -r ${GLIB_INC}; then
        AC_MSG_RESULT([Location specified: ${GLIB_INC}])
        GLIB_INC = "-I"${GLIB_INC} 
        AC_SUBST(GLIB_INC)
else
# Try to guess the location based on the location of gcc 
        glib_inc=`which gcc | sed "s#bin\/gcc#include\/glib-2.0#"`
        if test -r $glib_inc/glib.h; then
                AC_MSG_RESULT([Header file located in $GLIB_INC])
                GLIB_INC="-I"${glib_inc}
                AC_SUBST(GLIB_INC)
        else
		if test -r /usr/local/ap/include/glib-2.0/glib.h; then
		    glib_inc="/usr/local/ap/include/glib-2.0"
		elif test -r /usr/local/ap/include/glib-1.2/glib.h; then
		    glib_inc="/usr/local/ap/include/glib-1.2"
		elif test -r /usr/include/glib-2.0/glib.h; then
	            glib_inc="/usr/include/glib-2.0"
		elif test -r /usr/local/include/glib-2.0/glib.h; then
	            glib_inc="/usr/local/include/glib-2.0"
		elif test -r /usr/include/glib-1.2/glib.h; then
	            glib_inc="/usr/include/glib-1.2"
		elif test -r /usr/local/include/glib-1.2/glib.h; then
		    glib_inc="/usr/local/include/glib-1.2"
                else
		AC_MSG_ERROR([GLIB includes not found, please define GLIB_INC.]);
		fi
        AC_MSG_RESULT([Header file located in $GLIB_INC])
        GLIB_INC = "-I"${glib_inc} 
        AC_SUBST(GLIB_INC)
	fi
fi
])

AC_ARG_VAR([GLIBCONFIG_INC],    [GLIBCONFIG include directory])dnl
AC_CHECK_HEADER(glibconfig.h,,[
if test ${GLIBCONFIG_INC} && test -r ${GLIBCONFIG_INC}; then
        AC_MSG_RESULT([Location specified: ${GLIBCONFIG_INC}])
        GLIBCONFIG_INC="-I"${GLIBCONFIG_INC}
        AC_SUBST(GLIBCONFIG_INC)
else
# Try to guess the location based on the location of gcc
        glibconfig_inc=`which gcc | sed "s#bin\/gcc#lib\/glib-2.0\/include#"`
        if test -r ${glibconfig_inc}/glibconfig.h; then
                GLIBCONFIG_INC="-I"${glibconfig_inc}
                AC_MSG_RESULT([Header file located in ${glibconfig_inc} ])
                AC_SUBST(GLIBCONFIG_INC)
        else
		if test -r /usr/lib/glib-2.0/include/glibconfig.h; then
		    glibconfig_inc="/usr/lib/glib-2.0/include"
		elif test -r /usr/local/lib/glib-2.0/include/glibconfig.h; then
		    glibconfig_inc="/usr/local/lib/glib-2.0/include"
		elif test -r /usr/local/ap/lib/glib-2.0/include/glibconfig.h; then
		    glibconfig_inc="/usr/local/ap/lib/glib-2.0/include"
		elif test -r /usr/lib/glib-1.2/include/glibconfig.h; then
		    glibconfig_inc="/usr/lib/glib-1.2/include"
		elif test -r /usr/local/lib/glib-1.2/include/glibconfig.h; then
		    glibconfig_inc="/usr/local/lib/glib-1.2/include"
		elif test -r /usr/local/ap/lib/glib-1.2/include/glibconfig.h; then
		    glibconfig_inc="/usr/local/ap/lib/glib-1.2/include"
		else
                AC_MSG_ERROR([GLIBCONFIG include not found, please define GLIBCONFIG_INC.]);
		fi
        AC_MSG_RESULT([Header file located in $GLIBCONFIG_INC])
        GLIBCONFIG_INC="-I"${glibconfig_inc}
        AC_SUBST(GLIBCONFIG_INC)
	fi
fi
])

#-----------------------------------------------------------------------------------------------------------
# Python
#-----------------------------------------------------------------------------------------------------------
AC_ARG_VAR([PYTHON_INC],    [PYTHON include directory])dnl
AC_CHECK_HEADER( Python.h,,[
if test ${PYTHON_INC} && test -r ${PYTHON_INC}; then
        AC_MSG_RESULT([Location specified: ${PYTHON_INC}])
        PYTHON_INC="-I"${PYTHON_INC}
        AC_SUBST(PYTHON_INC)
else
# Try to guess the location based on the location of gcc 
        python_inc=`which python | sed "s#bin\/gcc#include#"`
        if test -r ${python_inc}/python2.5/Python.h; then
                PYTHON_INC="-I"${python_inc}
                AC_SUBST(PYTHON_INC)
                AC_MSG_RESULT([Header file located in $python_inc]) 
        elif test -r ${python_inc}/python2.4/Python.h; then
                PYTHON_INC="-I"${python_inc}
                AC_SUBST(PYTHON_INC)
                AC_MSG_RESULT([Header file located in $python_inc])
        else
		if test -r /usr/include/python2.5/Python.h; then
		    PYTHON_INC="/usr/include/python2.5"
	         elif test -r /usr/include/python2.4/Python.h; then
		    PYTHON_INC="/usr/include/python2.4"
	         elif test -r /usr/local/include/python2.5/Python.h; then
		    PYTHON_INC="/usr/local/include/python2.5"
	         elif test -r /usr/local/include/python2.4/Python.h; then
		    PYTHON_INC="/usr/local/include/python2.4"
	         elif test -r /usr/local/ap/include/python2.5/Python.h; then
		    PYTHON_INC="/usr/local/ap/include/python2.5"
	         elif test -r /usr/local/ap/include/python2.4/Python.h; then
		    PYTHON_INC="/usr/local/ap/include/python2.4"
                 else
		AC_MSG_ERROR([PYTHON includes not found, please define PYTHON_INC.]);
	        fi
	  AC_MSG_RESULT([Header file located in $PYTHON_INC])
          PYTHON_INC="-I"${PYTHON_INC}
          AC_SUBST(PYTHON_INC)
        fi
fi
])

#-----------------------------------------------------------------------------------------------------------
# BOOST
#-----------------------------------------------------------------------------------------------------------
AC_ARG_VAR([BOOST_INC],    [BOOST include directory])dnl
AC_CHECK_HEADER(shared_ptr.hpp,,[
if test ${BOOST_INC} && test -r ${BOOST_INC}; then
        BOOST_INC="-I"$BOOST_INC
        AC_SUBST(BOOST_INC)
        AC_MSG_RESULT([Location specified: ${BOOST_INC}])
else
# Try to guess the location based on the location of gcc 
        boost_inc=`which gcc | sed "s#bin\/gcc#include#"`
        if test -r ${boost_inc}/boost/shared_ptr.hpp; then
                BOOST_INC="-I"${boost_inc}
                AC_SUBST(BOOST_INC)
                AC_MSG_RESULT([Header file located in ${boost_inc}])
        else
		if test -r /usr/include/boost/shared_ptr.hpp; then
		    boost_inc="/usr/include"
		elif test -r /usr/local/include/boost/shared_ptr.hpp; then
		    boost_inc="/usr/local/include"
		elif test -r /usr/local/include/boost-1_34/boost/shared_ptr.hpp; then
		    boost_inc="/usr/local/include/boost-1_34"
		elif test -r /usr/local/include/boost-1_34_1/boost/shared_ptr.hpp; then
		    boost_inc="/usr/local/include/boost-1_34_1"
		elif test -r /usr/local/ap/include/boost-1_34/boost/shared_ptr.hpp; then
		    boost_inc="/usr/local/ap/include/boost-1_34"
		elif test -r /usr/local/ap/include/boost-1_34_1/boost/shared_ptr.hpp; then
		    boost_inc="/usr/local/ap/include/boost-1_34_1"
		elif test -r /usr/local/include/boost-1_33/boost/shared_ptr.hpp; then
		    boost_inc="/usr/local/include/boost-1_33"
		elif test -r /usr/local/ap/include/boost-1_33/boost/shared_ptr.hpp; then
		    boost_inc="/usr/local/ap/include/boost-1_33"
                else
		AC_MSG_ERROR([BOOST include V 1.33 or 1.34 not found, please define BOOST_INC.]);
		fi
        AC_MSG_RESULT([Header file located in $BOOST_INC])
        BOOST_INC="-I"${boost_inc}
        AC_SUBST(BOOST_INC)
	fi
fi
])

AC_ARG_VAR([BOOST_PYTHON_LINK],    [link option for BOOST Python lib, default -lboost_python-gcc])dnl
if test -z "${BOOST_PYTHON_LINK}" ; then
        BOOST_PYTHON_LINK='-lboost_python'
fi
AC_SUBST(BOOST_PYTHON_LINK)


# Checks for library functions.
AC_CHECK_FUNCS([pow sqrt strcasecmp strdup])

AC_CONFIG_FILES([src/Makefile Makefile])
AC_OUTPUT
