
lib_LTLIBRARIES		= libbmlfactory.la
include source_files

INCLUDES = -I$(GLIB_INC) -I$(GLIBCONFIG_INC) -I$(BOOST_INC) -I$(top_srcdir)/include -I$(top_srcdir)/../beamline/include -I$(top_srcdir)/../mxyzptlk/include -I$(top_srcdir)/../basic_toolkit/include -I$(top_srcdir)/../gms/include

AM_YFLAGS = -d
